finally got rif of firabase basic login to dashboards works we just need to make the front interactive